# libhrpc

./: CMakeLists.txt  ClangOverride.txt  README.md  rpc_client.cpp  rpc_client.hpp  rpc_client_test.cpp  run-cmake.sh
proto/: CMakeLists.txt  hdfs.proto
